--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ header > h1{
     text-align: center;
 }
 
-#prodotti{
+#products{
     margin-top: 100px;
 }
+
+.immagine{
+    padding: 10px;
+}
+
+.immagine > img{
+    height: 100px;
+}
+
